Prevent x overflow from scrolling 2px padding.

--- a/src/main/webapp/sidebar.css
+++ b/src/main/webapp/sidebar.css
@@ -77,6 +77,7 @@
 .results ul {
   position: static;
   overflow-y: scroll;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;
   height: 100%;
